--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -1,7 +1,8 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
-{{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
+{{ $external_https_port := coalesce $.Env.HTTPS_PASSTHROUGH_PORT $.Env.HTTPS_PORT "443" }}
+{{ $https_passthrough_enabled := (ne (coalesce $.Env.HTTPS_PASSTHROUGH_PORT "") "") }}
 
 {{ define "upstream" }}
 	{{ if .Address }}
@@ -239,11 +240,11 @@ upstream {{ $upstream_name }} {
 {{/* Use the cert specified on the container or fallback to the best vhost match */}}
 {{ $cert := (coalesce $certName $vhostCert) }}
 
-{{ $is_https := (and (ne $https_method "nohttps") (ne $cert "") (exists (printf "/etc/nginx/certs/%s.crt" $cert)) (exists (printf "/etc/nginx/certs/%s.key" $cert))) }}
+{{ $is_https := (and (ne $https_method "nohttps") (ne $https_method "passthrough") (ne $cert "") (exists (printf "/etc/nginx/certs/%s.crt" $cert)) (exists (printf "/etc/nginx/certs/%s.key" $cert))) }}
 
 {{ if $is_https }}
 
-{{ if eq $https_method "redirect" }}
+{{ if (or (eq $https_method "redirect") (eq $https_method "passthrough")) }}
 server {
 	server_name {{ $host }};
 	listen {{ $external_http_port }} {{ $default_server }};
@@ -383,7 +384,7 @@ server {
 	}
 }
 
-{{ if (and (not $is_https) (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
+{{ if (and (not $is_https) (ne $https_method "passthrough") (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name {{ $host }};
 	listen {{ $external_https_port }} ssl http2 {{ $default_server }};
@@ -396,6 +397,18 @@ server {
 	ssl_certificate /etc/nginx/certs/default.crt;
 	ssl_certificate_key /etc/nginx/certs/default.key;
 }
+{{ else }}
+	{{ if (eq $https_method "passthrough") }}
+		{{ if $https_passthrough_enabled }}
+# NOTE: HTTPS passthrough enabled
+# see /etc/nginx/nginx-stream.conf
+		{{ else }}
+# WARNING: HTTPS_METHOD=passthrough but nginx-proxy container has
+# no HTTPS_PASSTHROUGH_PORT defined. You MUST define this variable to
+# enable HTTPS passthrough
+		{{ end }}
+#
+	{{ end }}
 {{ end }}
 
 {{ end }}
