Enable proxy_protocol on HTTPS passthrough
To get the correct client IP.

--- a/app/nginx-stream.tmpl
+++ b/app/nginx-stream.tmpl
@@ -35,6 +35,7 @@
         listen {{ $external_https_port }};
         {{ $access_log }}
         proxy_pass $name;
+        proxy_protocol on;
         ssl_preread on;
     }
 {{ end }}
