--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -3,6 +3,7 @@
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PASSTHROUGH_PORT $.Env.HTTPS_PORT "443" }}
 {{ $https_passthrough_enabled := (ne (coalesce $.Env.HTTPS_PASSTHROUGH_PORT "") "") }}
+{{ $https_proxy_protocol := when $https_passthrough_enabled "proxy_protocol" "" }}
 
 {{ define "upstream" }}
 	{{ if .Address }}
@@ -155,10 +156,12 @@ server {
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	listen {{ $external_https_port }} ssl http2;
+	listen {{ $external_https_port }} ssl http2 {{ $https_proxy_protocol }};
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2;
+	listen [::]:{{ $external_https_port }} ssl http2 {{ $https_proxy_protocol }};
 	{{ end }}
+	set_real_ip_from 127.0.0.1;
+	real_ip_header proxy_protocol;
 	{{ $access_log }}
 	return 503;
 
@@ -270,10 +273,12 @@ server {
 
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ end }}
+	set_real_ip_from 127.0.0.1;
+	real_ip_header proxy_protocol;
 	{{ $access_log }}
 
 	{{ if eq $network_tag "internal" }}
@@ -387,10 +392,12 @@ server {
 {{ if (and (not $is_https) (ne $https_method "passthrough") (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen {{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ end }}
+	set_real_ip_from 127.0.0.1;
+	real_ip_header proxy_protocol;
 	{{ $access_log }}
 	return 500;
 
