--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -160,8 +160,10 @@ server {
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2 {{ $https_proxy_protocol }};
 	{{ end }}
+	{{ if $https_passthrough_enabled }}
 	set_real_ip_from 127.0.0.1;
 	real_ip_header proxy_protocol;
+	{{ end }}
 	{{ $access_log }}
 	return 503;
 
@@ -277,8 +279,10 @@ server {
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ end }}
+	{{ if $https_passthrough_enabled }}
 	set_real_ip_from 127.0.0.1;
 	real_ip_header proxy_protocol;
+	{{ end }}
 	{{ $access_log }}
 
 	{{ if eq $network_tag "internal" }}
@@ -396,8 +400,10 @@ server {
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }} {{ $https_proxy_protocol }};
 	{{ end }}
+	{{ if $https_passthrough_enabled }}
 	set_real_ip_from 127.0.0.1;
 	real_ip_header proxy_protocol;
+	{{ end }}
 	{{ $access_log }}
 	return 500;
 
