--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -1,5 +1,6 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
+{{ $host_variable_name := coalesce $.Env.HOST_VARIABLE_NAME "VIRTUAL_HOST" }}
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PASSTHROUGH_PORT $.Env.HTTPS_PORT "443" }}
 {{ $https_passthrough_enabled := (ne (coalesce $.Env.HTTPS_PASSTHROUGH_PORT "") "") }}
@@ -165,7 +166,7 @@ server {
 }
 {{ end }}
 
-{{ range $host_definition, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}
+{{ range $host_definition, $containers := groupByMulti $ (printf "Env.%s" $host_variable_name) "," }}
 
 {{ $host_definition_fields := split $host_definition ":" }}
 {{ $host_has_specific_port := gt (len $host_definition_fields) 1 }}
