--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -194,13 +194,17 @@ server {
 upstream {{ $upstream_name }} {
 
 {{ range $container := $containers }}
+	{{ $debug := (eq (coalesce $container.Env.DEBUG "false") "true") }}
 	{{ $addrLen := len $container.Addresses }}
 
 	{{ range $knownNetwork := $CurrentContainer.Networks }}
 		{{ range $containerNetwork := $container.Networks }}
 			{{ if (and (ne $containerNetwork.Name "ingress") (or (eq $knownNetwork.Name $containerNetwork.Name) (eq $knownNetwork.Name "host"))) }}
 				## Can be connected with "{{ $containerNetwork.Name }}" network
-
+				{{ if $debug }}
+				# Exposed ports: {{ $container.Addresses }}
+				# VIRTUAL_PORT: {{ $container.Env.VIRTUAL_PORT }}
+				{{ end }}
 				{{/* If only 1 port exposed, use that */}}
 				{{ if eq $addrLen 1 }}
 					{{ $address := index $container.Addresses 0 }}
