Only one fallback entry 127.0.0.1 / upstream block
+ Warning message when the container is reported reachable but has
no IP on the considered network
+ Better nginx default.conf formatting

--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -15,19 +15,19 @@
 	{{ if .Address }}
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
 		{{ if and .Container.Node.ID .Address.HostPort }}
-			# {{ .Container.Node.Name }}/{{ .Container.Name }}
+	# {{ .Container.Node.Name }}/{{ .Container.Name }}
 			server {{ .Container.Node.Address.IP }}:{{ .Address.HostPort }};
 		{{/* If there is no swarm node or the port is not published on host, use container's IP:PORT */}}
 		{{ else if .Network }}
-			# {{ .Container.Name }}
-			server {{ .Network.IP }}:{{ .Address.Port }};
+	# {{ .Container.Name }}
+	server {{ .Network.IP }}:{{ .Address.Port }};
 		{{ end }}
 	{{ else if .Network }}
-		# {{ .Container.Name }}
+	# {{ .Container.Name }}
 		{{ if .Network.IP }}
-			server {{ .Network.IP }}:{{ .VirtualPort }};
+	server {{ .Network.IP }}:{{ .VirtualPort }};
 		{{ else }}
-			server 127.0.0.1 down;
+	# /!\ No IP for this network!
 		{{ end }}
 	{{ end }}
 
@@ -201,24 +201,24 @@ upstream {{ $upstream_name }} {
 	{{ range $knownNetwork := $CurrentContainer.Networks }}
 		{{ range $containerNetwork := $container.Networks }}
 			{{ if (and (ne $containerNetwork.Name "ingress") (or (eq $knownNetwork.Name $containerNetwork.Name) (eq $knownNetwork.Name "host"))) }}
-				## Can be connected with "{{ $containerNetwork.Name }}" network
+	## Can be connected with "{{ $containerNetwork.Name }}" network
 				{{ $port := (coalesce $container.Env.VIRTUAL_PORT $defaultPort) }}
 				{{ $address := where $container.Addresses "Port" $port | first }}
 				{{ if $debug }}
-				# Exposed ports: {{ $container.Addresses }}
-				# Default virtual port: {{ $defaultPort }}
-				# VIRTUAL_PORT: {{ $container.Env.VIRTUAL_PORT }}
+	# Exposed ports: {{ $container.Addresses }}
+	# Default virtual port: {{ $defaultPort }}
+	# VIRTUAL_PORT: {{ $container.Env.VIRTUAL_PORT }}
 					{{ if not $address }}
-				# /!\ Virtual port not exposed
+	# /!\ Virtual port not exposed
 					{{ end }}
 				{{ end }}
 				{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork "VirtualPort" $port) }}
-			{{ else }}
-				# Cannot connect to network of this container
-				server 127.0.0.1 down;
 			{{ end }}
 		{{ end }}
 	{{ end }}
+	{{/* nginx-proxy/nginx-proxy#1105 */}}
+	# Fallback entry
+	server 127.0.0.1 down;
 {{ end }}
 }
 
